forcegraph: fix width when scrollbar is present

--- a/scss/_forcegraph.scss
+++ b/scss/_forcegraph.scss
@@ -5,8 +5,6 @@
 
   canvas {
     display: block;
-    width: 100%;
-    height: 100%;
   }
 
   svg {
